```mermaid
classDiagram
    direction LR

    %% Interfaces
    class Product {
        <<interface>>
        +id: string
        +name: string
        +price: number
        +currency: string
    }

    class NewProductResponse {
        <<interface>>
        +product_id: string
        +product_title: string
        +pricing: object
    }

    %% Classes
    class ProductCard {
        +render(product: Product): void
    }

    class NewProductAPI {
        +fetchProduct(id: string): Promise<NewProductResponse>
    }

    class ProductAdapter {
        +static toProduct(external: NewProductResponse): Product
    }

    %% Relationships
    ProductCard ..> Product
    ProductAdapter ..> Product
    ProductAdapter ..> NewProductResponse

    %% Client
    class Client
    Client --> NewProductAPI
    Client --> ProductCard
    Client --> ProductAdapter